syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.foofilers.cfh";
option java_outer_classname = "CfhApplicationService";

package auth;

service Auth {
  rpc Login (LoginRequest) returns (Jwt);
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LogoutRequest {
  string userId = 1;
}

message Jwt {
  string jwt = 1;
}
